# bpm

./: .env.example  .gitignore  docker-compose.yml
backend/: API-SPEC.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1cadca6569dc_user_add_updated_at_last_login_is_.py  2be8abcbd713_refresh_token_expires_timezone.py  382a8e305932_file_processing_thumbnails.py  44474bf7b5c0_track_visibility_trackfile.py  4d6e862c57b4_user_table.py  5aef29690b35_refresh_token_hash_string_length.py  61049cb8c4ab_refresh_token_created_at_timzone.py  6dad1a31a704_track_null_fields.py  81146c0575cb_user_add_token_version.py  8e25289b5a20_track_uuid_pk.py  9efba2194be9_refresh_token_revoked_at_field.py  a09c1af79be8_track_genre_instrument_mood_tag.py  bdbbb61e17ae_track_genre_tag_mood_instrument.py  d2f180baefc1_track_uuid_pk.py  dc4956fdb080_user_last_login_at_timezone.py  e1052da65a67_slugs_for_mood_genre_instruments.py  e749d570cad3_refresh_token.py  f16d8a836227_trackfile_status.py  f7b3a4c9d8e1_seed_genres_moods_instruments.py
backend/app/: dependencies.py  exception_handlers.py  exceptions.py  logger_settings.py  main.py
backend/app/api/v1/: router.py
backend/app/cache/: track_meta.py
backend/app/core/: config.py  db.py  rabbitmq.py  redis.py  security.py  storage.py
backend/app/modules/tracks/: exceptions.py  routes.py  schemas.py
backend/app/modules/users/: exceptions.py  models.py  routes.py  schemas.py  services.py
backend/app/utils/: get_volume_tags.py
backend/app/worker/: __main__.py  constants.py  main.py  parsers.py  storage_client.py
(+24 files in other folders)
